feat: fs module examples

--- a/node.js Advanced programing/core/package.json
+++ b/node.js Advanced programing/core/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "@types/node": "^18.8.4"
   }
 }
